[project]
name = "pharmaplus"
version = "0.1.0"
description = "PharmacoNetPlus: Open-Source Software for Protein-based Pharmacophore Modeling and Virtual Screening"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=1.13.0",
  "numpy",
  "numba>=0.59",
  "omegaconf>=2.3.0",
  "molvoxel==0.2.0",
  "gdown>=5.1.0",
  "tqdm",
  "rdkit",
  "openbabel-wheel>=3.1.1.20",
  "biopython>=1.83",
]
[project.optional-dependencies]
appl = [
  "torch>=2.3.1",
  "torch-geometric>=2.4.0",
  "torch-scatter>=2.1.2",
  "torch-sparse>=0.6.18",
  "torch-cluster>=1.6.3",
]
dev = [
  "torch>=2.3.1",
  "torch-geometric>=2.4.0",
  "torch-scatter>=2.1.2",
  "torch-sparse>=0.6.18",
  "torch-cluster>=1.6.3",
  "wandb",
]
[project.scripts]
pharmaplus = "pharmaplus.cli:main"